Fix breadcrumb alignment

--- a/public/scss/components/_breadcrumbs.scss
+++ b/public/scss/components/_breadcrumbs.scss
@@ -4,4 +4,5 @@ Breadcrumbs
 */
 ol.breadcrumb {
     margin: 0 0;
+    padding: 8px 0;
 }
